// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"insertAfter" injects an extension after its target ContainerChild 1`] = `
"\\"use strict\\";

var _SomeComponent = _interopRequireDefault(require(\\"/Users/person/components/SomeComponent.js\\"));

var _react = _interopRequireDefault(require(\\"react\\"));

var _peregrine = require(\\"@magento/peregrine\\");

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_react.default.createElement(\\"div\\", {
  \\"data-mid\\": \\"product.page.pricing\\"
}, _react.default.createElement(_peregrine.ContainerChild, {
  id: \\"product.page.pricing.add.button\\",
  render: () => {}
}), _react.default.createElement(_SomeComponent.default, null));"
`;

exports[`"insertBefore" injects an extension before its target ContainerChild 1`] = `
"\\"use strict\\";

var _SomeComponent = _interopRequireDefault(require(\\"/Users/person/components/SomeComponent.js\\"));

var _react = _interopRequireDefault(require(\\"react\\"));

var _peregrine = require(\\"@magento/peregrine\\");

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_react.default.createElement(\\"div\\", {
  \\"data-mid\\": \\"product.page.pricing\\"
}, _react.default.createElement(_SomeComponent.default, null), _react.default.createElement(_peregrine.ContainerChild, {
  id: \\"product.page.pricing.add.button\\",
  render: () => {}
}));"
`;

exports[`"removeChild" operation removes specified child, but not other children 1`] = `
"\\"use strict\\";

var _react = _interopRequireDefault(require(\\"react\\"));

var _peregrine = require(\\"@magento/peregrine\\");

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_react.default.createElement(\\"div\\", {
  \\"data-mid\\": \\"product.page.pricing\\"
}, _react.default.createElement(_peregrine.ContainerChild, {
  id: \\"product.page.pricing.some.other.button\\",
  render: () => _react.default.createElement(\\"div\\", null, \\"I should render\\")
}));"
`;

exports[`"removeContainer" operation removes container 1`] = `
"\\"use strict\\";

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_react.default.createElement(\\"div\\", null, \\"Should remove container below\\");"
`;

exports[`A removeChild operation works when ContainerChild is aliased in import 1`] = `
"\\"use strict\\";

var _react = _interopRequireDefault(require(\\"react\\"));

var _peregrine = require(\\"@magento/peregrine\\");

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_react.default.createElement(\\"div\\", {
  \\"data-mid\\": \\"product.page.pricing\\"
});"
`;

exports[`Operations work when createElement is used instead of React.createElement 1`] = `
"\\"use strict\\";

var _react = require(\\"react\\");

(0, _react.createElement)(\\"div\\", null, \\"Should remove container below\\");"
`;
